# mfia_fi

./: pyproject.toml  results.txt
data/in/: yield-curve-rates-2023-b.csv  yield-curve-rates-2023-c.csv  yield-curve-rates-2023-d.csv  yield-curve-rates-up-22-23.csv
fi_nss/: nss.py  nss3.py  nss_common.py  nss_ga_file.py  nss_qs.py  nss_qs2.py  nss_viewer.py
fi_nss/old/: ns.csv  ns2 copy.csv  ns2.csv  nss2.py  nss3.py  nss7.py  nss8.py  nss_dsa_file.py  qs.csv  qs2.csv  qs3.csv  qspline.py  qspline2.py  yield-curve-rates-2023.csv
