[tool.poetry]
name = "fi-nss"
version = "0.1.0"
description = ""
authors = ["Michael G. Langer-Monsalve <2669560+michaelglanger@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.12.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
jinja2 = "^3.1.3"
deap = "^1.4.1"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
